Fixed some issues where the loading animation was too large

--- a/css/layout.css
+++ b/css/layout.css
@@ -20,6 +20,7 @@
 
 .loading {
   position: absolute;
+  width: 50%;
   top: 50vh;
 }
 
